modify team member

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>EstateAgency Bootstrap Template</title>
@@ -183,41 +184,119 @@
   </nav>
   <!--/ Nav End /-->
 
-  <!--/ Intro Single star /-->
-  <section class="intro-single">
+  <!--/ Agents Star /-->
+  <section class="section-agents section-t8">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 col-lg-8">
-          <div class="title-single-box">
-            <h1 class="title-single">Contact US</h1>
-            <span class="color-text-a">Aut voluptas consequatur unde sed omnis ex placeat quis eos. Aut natus officia corrupti qui autem fugit consectetur quo. Et ipsum eveniet laboriosam voluptas beatae possimus qui ducimus. Et voluptatem deleniti. Voluptatum voluptatibus amet. Et esse sed omnis inventore hic culpa.</span>
+        <div class="col-md-12">
+          <div class="title-wrap d-flex justify-content-between">
+            <div class="title-box">
+              <h2 class="title-a">Our team</h2>
+            </div>
           </div>
         </div>
-        <div class="col-md-12 col-lg-4">
-          <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item">
-                <a href="index.html">Home</a>
-              </li>
-              <li class="breadcrumb-item active" aria-current="page">
-                Contact
-              </li>
-            </ol>
-          </nav>
-        </div>
       </div>
-    </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card-box-d">
+            <div class="card-img-d">
+              <img src="img/minsun.png" alt="" class="img-d img-fluid">
+            </div>
+            <div class="card-overlay card-overlay-hover d-flex flex-column ">
+              <div class="my-auto info-agents align-self-center justify-content-center">
+                <h3 class="title-d align-self-center">
+                  <a>Min Sun</a>
+                </h3>
+                <h3 class="subtitle-d align-self-center">
+                  <a>Advisor</a>
+                </h3>
+                <h3 class="content-d align-self-center">
+                  <a>Professor</a>
+                </h3>
+                <h3 class="content-d align-self-center">
+                  <a>Appier</a>
+                </h3>
+                <h3 class="content-d align-self-center">
+                  <a>Chief AI Scientist</a>
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card-box-d">
+              <div class="card-img-d">
+                <img src="img/artboard.png" alt="" class="img-d img-fluid">
+              </div>
+              <div class="card-overlay card-overlay-hover d-flex flex-column ">
+                <div class="my-auto info-agents align-self-center justify-content-center">
+                  <h3 class="title-d align-self-center">
+                    <a>Min Sun</a>
+                  </h3>
+                  <h3 class="subtitle-d align-self-center">
+                    <a>Advisor</a>
+                  </h3>
+                  <h3 class="content-d align-self-center">
+                    <a>Professor</a>
+                  </h3>
+                  <h3 class="content-d align-self-center">
+                    <a>Appier</a>
+                  </h3>
+                  <h3 class="content-d align-self-center">
+                    <a>Chief AI Scientist</a>
+                  </h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card-box-d">
+                <div class="card-img-d">
+                  <img src="img/minsun.png" alt="" class="img-d img-fluid">
+                </div>
+                <div class="card-overlay card-overlay-hover d-flex flex-column ">
+                  <div class="my-auto info-agents align-self-center justify-content-center">
+                    <h3 class="title-d align-self-center">
+                      <a>Min Sun</a>
+                    </h3>
+                    <h3 class="subtitle-d align-self-center">
+                      <a>Advisor</a>
+                    </h3>
+                    <h3 class="content-d align-self-center">
+                      <a>Professor</a>
+                    </h3>
+                    <h3 class="content-d align-self-center">
+                      <a>Appier</a>
+                    </h3>
+                    <h3 class="content-d align-self-center">
+                      <a>Chief AI Scientist</a>
+                    </h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+      </div>
+
   </section>
-  <!--/ Intro Single End /-->
+  <!--/ Agents End /-->
 
   <!--/ Contact Star /-->
-  <section class="contact">
+  <section class="contact section-t3">
     <div class="container">
       <div class="row">
+        <div class="col-md-12">
+            <div class="title-wrap d-flex justify-content-between">
+              <div class="title-box">
+                <h2 class="title-a">Contact us</h2>
+              </div>
+            </div>
+          </div>
         <div class="col-sm-12">
           <div class="contact-map box">
             <div id="map" class="contact-map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14487.99067245489!2d120.99481764865723!3d24.7955333756927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34683672cd4db607%3A0x112b5d5bda760413!2z5ZyL56uL5riF6I-v5aSn5a24!5e0!3m2!1szh-TW!2stw!4v1576482946647!5m2!1szh-TW!2stw"
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14487.99067245489!2d120.99481764865723!3d24.7955333756927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34683672cd4db607%3A0x112b5d5bda760413!2z5ZyL56uL5riF6I-v5aSn5a24!5e0!3m2!1szh-TW!2stw!4v1576482946647!5m2!1szh-TW!2stw"
                 width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
@@ -231,25 +310,29 @@
                 <div class="row">
                   <div class="col-md-6 mb-3">
                     <div class="form-group">
-                      <input type="text" name="name" class="form-control form-control-lg form-control-a" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+                      <input type="text" name="name" class="form-control form-control-lg form-control-a"
+                        placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
                       <div class="validation"></div>
                     </div>
                   </div>
                   <div class="col-md-6 mb-3">
                     <div class="form-group">
-                      <input name="email" type="email" class="form-control form-control-lg form-control-a" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email">
+                      <input name="email" type="email" class="form-control form-control-lg form-control-a"
+                        placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email">
                       <div class="validation"></div>
                     </div>
                   </div>
                   <div class="col-md-12 mb-3">
                     <div class="form-group">
-                      <input type="text" name="subject" class="form-control form-control-lg form-control-a" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject">
+                      <input type="text" name="subject" class="form-control form-control-lg form-control-a"
+                        placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject">
                       <div class="validation"></div>
                     </div>
                   </div>
                   <div class="col-md-12 mb-3">
                     <div class="form-group">
-                      <textarea name="message" class="form-control" name="message" cols="45" rows="8" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                      <textarea name="message" class="form-control" name="message" cols="45" rows="8"
+                        data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                       <div class="validation"></div>
                     </div>
                   </div>
@@ -522,4 +605,5 @@
   <script src="js/main.js"></script>
 
 </body>
+
 </html>
