--- a/index.html
+++ b/index.html
@@ -570,11 +570,6 @@
             <div class="title-box">
               <h2 class="title-a">Best Agents</h2>
             </div>
-            <div class="title-link">
-              <a href="agents-grid.html">All Agents
-                <span class="ion-ios-arrow-forward"></span>
-              </a>
-            </div>
           </div>
         </div>
       </div>
@@ -584,18 +579,43 @@
             <div class="card-img-d">
               <img src="img/minsun.png" alt="" class="img-d img-fluid">
             </div>
-            <div class="card-overlay card-overlay-hover">
-              <div class="card-body-d">
+            <div class="card-overlay card-overlay-hover d-flex flex-column ">
+              <div class="my-auto info-agents align-self-center justify-content-center">
+                  <h3 class="title-d align-self-center">
+                      <a>Min Sun</a>  
+                    </h3>
+                    <h3 class="subtitle-d align-self-center">                  
+                      <a>Advisor</a>
+                    </h3>
+                    <h3 class="content-d align-self-center">
+                      <a>Professor</a>
+                    </h3>
+                    <h3 class="content-d align-self-center">
+                        <a>Appier</a>
+                      </h3>
+                      <h3 class="content-d align-self-center">
+                          <a>Chief AI Scientist</a>
+                      </h3>
+              </div>
+
+              <!-- <div class="justify-content-center" style="height: 100%; margin: 1rem;">
                   <h3 class="title-d">
                     <a style="color: white">Min Sun</a>  
                   </h3>
                   <h3 class="title-d">                  
                     <a style="color: #c7c7c7; font-size:1.5rem">Advisor</a>
                   </h3>
-                  <h5 class="title-d" style="color: white; padding: 0.5rem;">Professor</h5>
-                  <h5 class="title-d" style="color: white; padding: 0.5rem;">Appier</h5>
-                  <h5 class="title-d" style="color: white; padding: 0.5rem;">Chief AI Scientist</h5>
-              </div>
+                  <h3 class="content-d">
+                    <a style="color: white; padding: 0.5rem;">Professor</a>
+                  </h3>
+                  <h3 class="content-d">
+                    
+                      <a style="color: white; padding: 0.5rem;">Appier</a>
+                    </h3>
+                    <h3 class="content-d">
+                        <a style="color: white; padding: 0.5rem;">Chief AI Scientist</a>
+                    </h3>
+              </div> -->
             </div>
           </div>
         </div>
