--- a/contact.html
+++ b/contact.html
@@ -104,9 +104,62 @@
           </div>
         </div>
         <div class="col-md-4">
+          <div class="card-box-d">
+            <div class="card-img-d">
+              <img src="img/eric.png" alt="" class="img-d img-fluid">
+            </div>
+            <div class="card-overlay card-overlay-hover d-flex flex-column ">
+              <div class="my-auto info-agents align-self-center justify-content-center">
+                <h3 class="title-d align-self-center">
+                  <a>Min Sun</a>
+                </h3>
+                <h3 class="subtitle-d align-self-center">
+                  <a>Advisor</a>
+                </h3>
+                <h3 class="content-d align-self-center">
+                  <a>Professor</a>
+                </h3>
+                <h3 class="content-d align-self-center">
+                  <a>Appier</a>
+                </h3>
+                <h3 class="content-d align-self-center">
+                  <a>Chief AI Scientist</a>
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-box-d">
+            <div class="card-img-d">
+              <img src="img/victor.png" alt="" class="img-d img-fluid">
+            </div>
+            <div class="card-overlay card-overlay-hover d-flex flex-column ">
+              <div class="my-auto info-agents align-self-center justify-content-center">
+                <h3 class="title-d align-self-center">
+                  <a>Min Sun</a>
+                </h3>
+                <h3 class="subtitle-d align-self-center">
+                  <a>Advisor</a>
+                </h3>
+                <h3 class="content-d align-self-center">
+                  <a>Professor</a>
+                </h3>
+                <h3 class="content-d align-self-center">
+                  <a>Appier</a>
+                </h3>
+                <h3 class="content-d align-self-center">
+                  <a>Chief AI Scientist</a>
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
             <div class="card-box-d">
               <div class="card-img-d">
-                <img src="img/artboard.png" alt="" class="img-d img-fluid">
+                <img src="img/henry.png" alt="" class="img-d img-fluid">
               </div>
               <div class="card-overlay card-overlay-hover d-flex flex-column ">
                 <div class="my-auto info-agents align-self-center justify-content-center">
@@ -130,32 +183,32 @@
             </div>
           </div>
           <div class="col-md-4">
-              <div class="card-box-d">
-                <div class="card-img-d">
-                  <img src="img/minsun.png" alt="" class="img-d img-fluid">
-                </div>
-                <div class="card-overlay card-overlay-hover d-flex flex-column ">
-                  <div class="my-auto info-agents align-self-center justify-content-center">
-                    <h3 class="title-d align-self-center">
-                      <a>Min Sun</a>
-                    </h3>
-                    <h3 class="subtitle-d align-self-center">
-                      <a>Advisor</a>
-                    </h3>
-                    <h3 class="content-d align-self-center">
-                      <a>Professor</a>
-                    </h3>
-                    <h3 class="content-d align-self-center">
-                      <a>Appier</a>
-                    </h3>
-                    <h3 class="content-d align-self-center">
-                      <a>Chief AI Scientist</a>
-                    </h3>
-                  </div>
+            <div class="card-box-d">
+              <div class="card-img-d">
+                <img src="img/chinan.png" alt="" class="img-d img-fluid">
+              </div>
+              <div class="card-overlay card-overlay-hover d-flex flex-column ">
+                <div class="my-auto info-agents align-self-center justify-content-center">
+                  <h3 class="title-d align-self-center">
+                    <a>Min Sun</a>
+                  </h3>
+                  <h3 class="subtitle-d align-self-center">
+                    <a>Advisor</a>
+                  </h3>
+                  <h3 class="content-d align-self-center">
+                    <a>Professor</a>
+                  </h3>
+                  <h3 class="content-d align-self-center">
+                    <a>Appier</a>
+                  </h3>
+                  <h3 class="content-d align-self-center">
+                    <a>Chief AI Scientist</a>
+                  </h3>
                 </div>
               </div>
             </div>
-
+          </div>
+        </div>
       </div>
 
   </section>
@@ -166,12 +219,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-            <div class="title-wrap d-flex justify-content-between">
-              <div class="title-box">
-                <h2 class="title-a">Contact US</h2>
-              </div>
+          <div class="title-wrap d-flex justify-content-between">
+            <div class="title-box">
+              <h2 class="title-a">Contact US</h2>
             </div>
           </div>
+        </div>
         <div class="col-sm-12">
           <div class="contact-map box">
             <div id="map" class="contact-map">
