fix video and nav bar alignment

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
       <a class="navbar-brand text-brand"><img src="img/bevi_logo.png" width="70rem"></a>
       <a class="navbar-brand text-brand ml-2" href="index.html">CarePLUS<span
           class="color-g subtext-brand">.ai</span></a>
-      <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
+      <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Features</a>
