--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <a class="navbar-brand text-brand"><img src="img/bevi_logo.png" width="70rem"></a>
       <a class="navbar-brand text-brand ml-2" href="index.html">CarePLUS<span
           class="color-g subtext-brand">.ai</span></a>
-      <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
+      <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Features</a>
@@ -147,12 +147,9 @@
         <div class="col-md-4">
           <div class="card-box-c foo">
             <div class="card-header-c d-flex">
-              <div class="card-box-ico">
-                <!-- <span class="fa fa-gamepad"></span> -->
+              <div class="card-box-ico justify-content-between">
                 <img src="img/icon-1.png" width="100rem">
-              </div>
-              <div class="card-title-c align-self-center">
-                <h2 class="title-c">Device</h2>
+                <span class="title-c">Device</span>
               </div>
             </div>
             <div class="card-body-c">
@@ -174,11 +171,9 @@
         <div class="col-md-4">
           <div class="card-box-c foo">
             <div class="card-header-c d-flex">
-              <div class="card-box-ico">
+              <div class="card-box-ico justify-content-center">
                 <img src="img/icon-2.png" width="100rem">
-              </div>
-              <div class="card-title-c align-self-center">
-                <h2 class="title-c">CarePLUS</h2>
+                <span class="title-c">CarePLUS</span>
               </div>
             </div>
             <div class="card-body-c">
@@ -192,11 +187,9 @@
         <div class="col-md-4">
           <div class="card-box-c foo">
             <div class="card-header-c d-flex">
-              <div class="card-box-ico">
+              <div class="card-box-ico justify-content-center">
                 <img src="img/icon-3.png" width="100rem">
-              </div>
-              <div class="card-title-c align-self-center">
-                <h2 class="title-c">APP</h2>
+                <span class="title-c">APP</span>
               </div>
             </div>
             <div class="card-body-c">
@@ -362,8 +355,10 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="row">
         <div class="col-md-12">
-          <iframe width="1280" height="720" src="https://www.youtube.com/embed/rrO5Dm8J4sc" frameborder="0"
+          <iframe width="100%" height="720" src="https://www.youtube.com/embed/rrO5Dm8J4sc" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
