update new content

--- a/about.html
+++ b/about.html
@@ -49,8 +49,7 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand"><img src="img/bevi_logo.png" width="70rem"></a>
-      <a class="navbar-brand text-brand ml-2" href="index.html">CarePLUS<span
+      <a class="navbar-brand text-brand" href="index.html">CarePLUS<span
           class="color-g subtext-brand">.ai</span></a>
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
