--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand"><img src="img/bevi_logo.png" width="70rem"></a>
-      <a class="navbar-brand text-brand ml-2" href="index.html">CarePLUS<span
+      <a class="navbar-brand text-brand" href="index.html">CarePLUS<span
           class="color-g subtext-brand">.ai</span></a>
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
@@ -71,7 +70,7 @@
   <!--/ Carousel Star /-->
   <div class="intro intro-carousel">
     <div id="carousel" class="owl-carousel owl-theme">
-      <div class="carousel-item-a intro-item bg-image" style="background-image: url(img/slide-1.jpg)">
+      <div class="carousel-item-a intro-item bg-image" style="background-image: url(img/banner.jpg)">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
           <div class="table-cell">
@@ -92,62 +91,105 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item-a intro-item bg-image" style="background-image: url(img/slide-2.png)">
-        <div class="overlay overlay-a"></div>
-        <div class="intro-content display-table">
-          <div class="table-cell">
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-10">
-                  <div class="intro-body">
-                    <h1 class="intro-title mb-2" style="color: #4b5cff">
-                      AINTU
-                    </h1>
-                    <h1 class="intro-title mb-2">
-                      2019 AI International Forum and Exhibition <br> Showcase Demo
-                    </h1>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="carousel-item-a intro-item bg-image" style="background-image: url(img/slide-3.jpg)">
-        <div class="overlay overlay-a"></div>
-        <div class="intro-content display-table">
-          <div class="table-cell">
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-5"></div>
-                <div class="col-lg-7">
-                  <div class="intro-body">
-                    <h1 class="intro-title mb-2">
-                      Privacy Preserving
-                    </h1>
-                    <h1 class="intro-title-top mb-2">
-                      Avoiding personally identifiable information exposure
-                    </h1>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
   <!--/ Carousel end /-->
 
-  <!--/ Services Star /-->
+  <!--/ CarePLUS’s Goal Star /-->
   <section class="section-services section-t8">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="title-wrap d-flex justify-content-between">
             <div class="title-box">
-              <h2 class="title-a">CarePLUS</h2>
+              <h2 class="title-a">CarePLUS’s Goal</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+  <!--/ CarePLUS’s Goal End /-->
+
+  <!--/ Installation Star /-->
+  <section class="section-services section-t8">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="title-wrap d-flex justify-content-between">
+            <div class="title-box">
+              <h2 class="title-a">How CarePLUS works</h2>
+              <h2 class="title-as">3 steps to Care your family</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card-box-c foo">
+            <div class="card-header-c">
+              <div class="card-box-ico justify-content-center">
+                <!-- <span class="fa fa-gamepad"></span> -->
+                <img src="img/installation_001.png" width="100%"><br>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="card-box-c foo">
+            <div class="card-header-c">
+              <div class="card-box-ico justify-content-center">
+                <!-- <span class="fa fa-gamepad"></span> -->
+                  <img src="img/triangle.png" width="5%">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="card-box-c foo">
+            <div class="card-header-c">
+              <div class="card-box-ico justify-content-center">
+                <!-- <span class="fa fa-gamepad"></span> -->
+                <img src="img/installation_002.png" width="100%">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="card-box-c foo">
+            <div class="card-header-c">
+              <div class="card-box-ico justify-content-center">
+                <!-- <span class="fa fa-gamepad"></span> -->
+                  <img src="img/triangle.png" width="5%">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="card-box-c foo">
+            <div class="card-header-c">
+              <div class="card-box-ico justify-content-center">
+                <!-- <span class="fa fa-gamepad"></span> -->
+                <img src="img/installation_003.png" width="100%">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+  <!--/ Installation  End /-->
+
+  <!--/ Technique Star /-->
+  <section class="section-services section-t8">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="title-wrap d-flex justify-content-between">
+            <div class="title-box">
+              <h2 class="title-a">Technique</h2>
             </div>
           </div>
         </div>
@@ -155,72 +197,42 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card-box-c foo">
-            <div class="card-header-c d-flex">
-              <div class="card-box-ico justify-content-between">
-                <img src="img/icon-1.png" width="100rem">
-                <span class="title-c">Device</span>
+            <div class="card-header-c">
+              <div class="card-box-ico justify-content-center">
+                <!-- <span class="fa fa-gamepad"></span> -->
+                <img src="img/technique_001.png" width="100%">
+                <h2 class="title-f">Privacy Preserving</h2>
               </div>
-            </div>
-            <div class="card-body-c">
-              <p class="content-c align-content-center">
-                &#9679; Full panorama
-              </p>
-              <p class="content-c align-content-center">
-                &#9679; Privacy
-              </p>
-              <p class="content-c align-content-center">
-                &#9679; Real time
-              </p>
-              <p class="content-c align-content-center">
-                &#9679; Voice
-              </p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card-box-c foo">
-            <div class="card-header-c d-flex">
+            <div class="card-header-c">
               <div class="card-box-ico justify-content-center">
-                <img src="img/icon-2.png" width="100rem">
-                <span class="title-c">CarePLUS</span>
+                <!-- <span class="fa fa-gamepad"></span> -->
+                <img src="img/technique_002.png" width="100%">
+                <h2 class="title-f">Fast Adapting</h2>
               </div>
-            </div>
-            <div class="card-body-c">
-              <p class="content-c">
-                CarePLUS is an integrated home care assistant that leverages cutting-edge recognition and
-                privacy-preserving technology.
-              </p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card-box-c foo">
-            <div class="card-header-c d-flex">
+            <div class="card-header-c">
               <div class="card-box-ico justify-content-center">
-                <img src="img/icon-3.png" width="100rem">
-                <span class="title-c">APP</span>
+                <!-- <span class="fa fa-gamepad"></span> -->
+                <img src="img/technique_003.png" width="100%">
+                <h2 class="title-f">Human-centered AI</h2>
               </div>
-            </div>
-            <div class="card-body-c">
-              <p class="content-c align-content-center">
-                &#9679; Message
-              </p>
-              <p class="content-c align-content-center">
-                &#9679; Alarm
-              </p>
-              <p class="content-c align-content-center">
-                &#9679; Remind
-              </p>
-              <p class="content-c align-content-center">
-                &#9679; Real-time Video
-              </p>
             </div>
           </div>
         </div>
       </div>
     </div>
+    </div>
   </section>
-  <!--/ Services End /-->
+  <!--/ Technique  End /-->
 
   <!--/ Features Star /-->
   <section class="section-services section-t8">
@@ -235,67 +247,69 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="card-box-c foo">
             <div class="card-header-c">
               <div class="card-box-ico justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/icon-4.png" width="100rem">
-                <h2 class="title-f">Panorama</h2>
+                <img src="img/panorama.png" width="50%">
+                <h2 class="title-f">360 Panorama</h2>
               </div>
-            </div>
-            <div class="card-body-c">
-              <p class="content-c align-content-center">
-                Providing wider field of view
-              </p>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="card-box-c foo">
             <div class="card-header-c">
               <div class="card-box-ico justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/icon-5.png" width="100rem">
-                <h2 class="title-f">Privacy</h2>
+                <img src="img/message.png" width="50%">
+                <h2 class="title-f">Voice Interaction</h2>
               </div>
-            </div>
-            <div class="card-body-c">
-              <p class="content-c align-content-center">
-                Avoiding personally identifiable information exposure
-              </p>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="card-box-c foo">
             <div class="card-header-c">
               <div class="card-box-ico justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/icon-6.png" width="100rem">
-                <h2 class="title-f">Real-time</h2>
+                <img src="img/privacy.png" width="50%">
+                <h2 class="title-f">Privacy Preserving</h2>
               </div>
-            </div>
-            <div class="card-body-c">
-              <p class="content-c align-content-center">
-                Racing against time for rescue
-              </p>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="card-box-c foo">
             <div class="card-header-c">
               <div class="card-box-ico justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/icon-7.png" width="100rem">
-                <h2 class="title-f">Voice</h2>
+                <img src="img/summarize.png" width="50%">
+                <h2 class="title-f">Summary Report</h2>
               </div>
             </div>
-            <div class="card-body-c">
-              <p class="content-c align-content-center">
-                A user-friendly interface and optimize determination
-              </p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-box-c foo">
+            <div class="card-header-c">
+              <div class="card-box-ico justify-content-center">
+                <!-- <span class="fa fa-gamepad"></span> -->
+                <img src="img/calendar.png" width="50%">
+                <h2 class="title-f">Personalized Service</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-box-c foo">
+            <div class="card-header-c">
+              <div class="card-box-ico justify-content-center">
+                <!-- <span class="fa fa-gamepad"></span> -->
+                <img src="img/human.png" width="50%">
+                <h2 class="title-f">Extend Service</h2>
+              </div>
             </div>
           </div>
         </div>
@@ -305,10 +319,8 @@
   </section>
   <!--/ Features  End /-->
 
-
-
   <!--/ Application Star /-->
-  <section class="section-news section-t8">
+  <section class="section-news section-t8 section-b2">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -331,7 +343,6 @@
               </div>
             </div>
           </div>
-
         </div>
         <div class="card-box-b col-lg-6">
           <div class="card-overlay">
@@ -344,17 +355,14 @@
           <div class="img-box-b">
             <img src="img/post-2.png" alt="" class="img-b img-fluid">
           </div>
-
-
         </div>
       </div>
-
     </div>
   </section>
   <!--/ Application End /-->
 
   <!--/ Video Star /-->
-  <section class="section-testimonials section-t8 nav-arrow-a">
+  <!-- <section class="section-testimonials section-t8 nav-arrow-a">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -372,7 +380,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--/ Video End /-->
 
   <!--/ footer Star /-->
