--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,7 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand"><img src="img/bevi_logo.png" width="70rem"></a>
-      <a class="navbar-brand text-brand ml-2" href="index.html">CarePLUS<span
+      <a class="navbar-brand text-brand" href="index.html">CarePLUS<span
           class="color-g subtext-brand">.ai</span></a>
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
@@ -214,16 +213,10 @@
         </div>
         <div class="col-sm-12">
           <div class="row">
-            <div class="col-md-3">
-              <p>PHONE: </p>
-              <p>EMAIL: </p>
-              <p>SOCIAL NETWORKS: </p>
-            </div>
-            <div class="col-md-9">
-              <p>+886 933587882</p>
-              <p>bevitw@gmail.com</p>
-              <p><a class="fa fa-facebook" href="https://www.facebook.com/bevitaiwan/"></a>
-              </p>
+            <div class="col-md-12">
+              <p>PHONE: +886 933587882</p>
+              <p>EMAIL: bevitw@gmail.com</p>
+              <p>SOCIAL NETWORKS: <a class="fa fa-facebook" href="https://www.facebook.com/bevitaiwan/"></a></p>
             </div>
           </div>
         </div>
