--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html">CarePLUS<span
-          class="color-g subtext-brand">.ai</span></a>
+      <a class="navbar-brand text-brand" href="index.html">CarePLUS<span class="color-g subtext-brand">.ai</span></a>
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -120,7 +119,6 @@
           <div class="title-wrap d-flex justify-content-between">
             <div class="title-box">
               <h2 class="title-a">How CarePLUS works</h2>
-              <h2 class="title-as">3 steps to Care your family</h2>
             </div>
           </div>
         </div>
@@ -141,7 +139,7 @@
             <div class="card-header-c">
               <div class="card-box-ico justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                  <img src="img/triangle.png" width="5%">
+                <img src="img/triangle.png" width="5%">
               </div>
             </div>
           </div>
@@ -161,7 +159,7 @@
             <div class="card-header-c">
               <div class="card-box-ico justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                  <img src="img/triangle.png" width="5%">
+                <img src="img/triangle.png" width="5%">
               </div>
             </div>
           </div>
@@ -234,14 +232,14 @@
   </section>
   <!--/ Technique  End /-->
 
-  <!--/ Features Star /-->
+  <!--/ Device Features Star /-->
   <section class="section-services section-t8">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="title-wrap d-flex justify-content-between">
             <div class="title-box">
-              <h2 class="title-a">Features</h2>
+              <h2 class="title-a">Device Features</h2>
             </div>
           </div>
         </div>
@@ -252,8 +250,25 @@
             <div class="card-header-c">
               <div class="card-box-ico justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/panorama.png" width="50%">
-                <h2 class="title-f">360 Panorama</h2>
+                <div class="icon-hover" id="panorama">
+                  <img src="img/panorama.png" width="50%">
+                  <h2 class="title-f">360 Panorama</h2>
+                  <p>Seeing all entrance.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-box-c foo">
+            <div class="card-header-c">
+              <div class="card-box-ico justify-content-center">
+                <div class="icon-hover" id="voice">
+                  <!-- <span class="fa fa-gamepad"></span> -->
+                  <img src="img/message.png" width="50%">
+                  <h2 class="title-f">Active Voice Interaction</h2>
+                  <p>Interact with user via voice.</p>
+                </div>
               </div>
             </div>
           </div>
@@ -263,52 +278,11 @@
             <div class="card-header-c">
               <div class="card-box-ico justify-content-center">
                 <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/message.png" width="50%">
-                <h2 class="title-f">Voice Interaction</h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card-box-c foo">
-            <div class="card-header-c">
-              <div class="card-box-ico justify-content-center">
-                <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/privacy.png" width="50%">
-                <h2 class="title-f">Privacy Preserving</h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card-box-c foo">
-            <div class="card-header-c">
-              <div class="card-box-ico justify-content-center">
-                <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/summarize.png" width="50%">
-                <h2 class="title-f">Summary Report</h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card-box-c foo">
-            <div class="card-header-c">
-              <div class="card-box-ico justify-content-center">
-                <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/calendar.png" width="50%">
-                <h2 class="title-f">Personalized Service</h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card-box-c foo">
-            <div class="card-header-c">
-              <div class="card-box-ico justify-content-center">
-                <!-- <span class="fa fa-gamepad"></span> -->
-                <img src="img/human.png" width="50%">
-                <h2 class="title-f">Extend Service</h2>
+                <div class="icon-hover" id="privacy">
+                  <img src="img/privacy.png" width="50%">
+                  <h2 class="title-f">Privacy Preserving</h2>
+                  <p>Protect users’ privacy form source.</p>
+                </div>
               </div>
             </div>
           </div>
@@ -317,10 +291,73 @@
     </div>
     </div>
   </section>
-  <!--/ Features  End /-->
+  <!--/ Device Features End /-->
+
+  <!--/ App Features Star /-->
+  <section class="section-services section-t8">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="title-wrap d-flex justify-content-between">
+              <div class="title-box">
+                <h2 class="title-a">APP Features</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card-box-c foo">
+              <div class="card-header-c">
+                <div class="card-box-ico justify-content-center">
+                  <!-- <span class="fa fa-gamepad"></span> -->
+                  <div class="icon-hover" id="summary">
+                    <img src="img/summarize.png" width="50%">
+                    <h2 class="title-f">Summary Report</h2>
+                    <p>Log users’ activities.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card-box-c foo">
+              <div class="card-header-c">
+                <div class="card-box-ico justify-content-center">
+                  <div class="icon-hover" id="personal">
+                    <!-- <span class="fa fa-gamepad"></span> -->
+                    <img src="img/calendar.png" width="50%">
+                    <h2 class="title-f">Personalized Service</h2>
+                    <p>Import your calendar, remind you the important schedule.</p>
+                  </div>
+                </div>
+  
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card-box-c foo">
+              <div class="card-header-c">
+                <div class="card-box-ico justify-content-center">
+                  <div class="icon-hover" id="extendable">
+                    <!-- <span class="fa fa-gamepad"></span> -->
+                    <img src="img/human.png" width="50%">
+                    <h2 class="title-f">Extendable Services</h2>
+                    <p> Connect to extend service such as order in, transport service, home clean etc.</p>
+                  </div>
+                </div>
+  
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
+    <!--/ App Features End /-->
 
   <!--/ Application Star /-->
-  <section class="section-news section-t8 section-b2">
+  <!-- <section class="section-news section-t8 section-b2">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -358,7 +395,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--/ Application End /-->
 
   <!--/ Video Star /-->
